--- a/_site.yml
+++ b/_site.yml
@@ -5,6 +5,8 @@ navbar:
   right:
     - text: "plotly"
       href: plotly.html
+    - text: "dashboard"
+      href: airbnb_dashboard.html
     - icon: fa-envelope fa-lg
       href: mailto:<you@youremail.com>
     - icon: fa-github fa-lg
